# rhbzquery

./: .stack-all  .travis.yml  ChangeLog.md  Main.hs  README.md  TODO  bzquery.cabal  cabal.project  rhbzquery.cabal  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts22.yaml  stack.yaml
.github/workflows/: build.yml
src/: Bugzilla.hs  Common.hs  Fields.hs  Help.hs  Main.hs  ParseArg.hs  User.hs
test/: tests.hs
