cabal-version:       1.18
name:                bzquery
version:             0.1.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@redhat.com
-- copyright:
-- category:
build-type:          Simple
extra-doc-files:     ChangeLog.md

executable bzquery
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base <5
                     , bugzilla
                     , bytestring
                     , extra
                     , filepath
                     , http-types
                     , optparse-applicative
                     , simple-cmd-args
                     , text
  -- hs-source-dirs:
  default-language:    Haskell2010
