name:                bzquery
version:             0.1.0
synopsis:            Bugzilla query tool
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@redhat.com
copyright:           2020  Jens Petersen <petersen@redhat.com>
category:            Utils
--homepage:            https://github.com/juhp/tmp
--bug-reports:         https://github.com/juhp/tmp/issues
build-type:          Simple
extra-doc-files:     ChangeLog.md
cabal-version:       1.18
--tested-with:         GHC == 8.4.4, GHC == 8.6.5,  GHC == 8.8.4, GHC == 8.10.2

--source-repository head
--  type:                git
--  location:            https://github.com/juhp/tmp.git


executable bzquery
  main-is:             Main.hs
  other-modules:       Bugzilla
                       Fields
                       Help
                       ParseArg
                       Paths_bzquery
                       User
  -- other-extensions:
  build-depends:       base <5
                     , bytestring
                     , config-ini
                     , directory
                     , email-validate
                     , extra
                     , filepath
                     , http-types
                     , optparse-applicative
                     , simple-cmd
                     , simple-cmd-args
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
